--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "open": "0.0.5"
   },
   "engines": {
-    "node": ">=0.10.22",
-    "npm": ">=1.3.14"
+    "node": "^4.4.4",
+    "npm": "^3.8.6"
   },
   "scripts": {
     "start": "node keystone.js"
