--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "async": "~0.9.0",
-    "cookies": "^0.5.0",
     "dotenv": "0.4.0",
     "express3-handlebars": "~0.5.0",
     "handlebars": "^2.0.0-alpha.2",
     "keystone": "~0.3.1",
     "moment": "~2.7.0",
-    "underscore": "~1.6.0",
-    "sendgrid": "~1.2.0"
+    "sendgrid": "~1.2.0",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
