--- a/package.json
+++ b/package.json
@@ -3,22 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "async": "~0.9.0",
-    "dotenv": "0.4.0",
-    "express3-handlebars": "~0.5.0",
-    "handlebars": "^2.0.0-alpha.2",
-    "keystone": "~0.3.1",
-    "moment": "~2.7.0",
-    "sendgrid": "~1.2.0",
-    "underscore": "~1.6.0"
+    "async": "~1.2.1",
+    "dotenv": "1.1.0",
+    "express3-handlebars": "~0.5.2",
+    "handlebars": "^2.0.0",
+    "keystone": "~0.3.19",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-sass": "^2.3.1",
-    "jshint-stylish": "~0.1.3",
-    "minify": "0.6.1",
-    "open": "0.0.5"
+  
   },
   "engines": {
     "node": "^4.4.4",
